--- a/client/body.html
+++ b/client/body.html
@@ -1,4 +1,5 @@
-<body ng-app="simple-todos"
-      ng-include="'client/todos-list.ng.html'"
-      ng-controller="TodosListCtrl">
+<body ng-app="bullboard">
+    <header ng-include="'client/templates/header.ng.html'" ng-controller="HeaderCtrl"></header>
+    <arcticle ng-include="'client/templates/page.ng.html'" ng-controller="PageCtrl"></arcticle>
+    <footer ng-include="'client/templates/footer.ng.html'"></footer>
 </body>
