--- a/client/body.html
+++ b/client/body.html
@@ -1,5 +1,5 @@
 <body ng-app="bullboard">
-    <header ng-include="'client/templates/header.ng.html'" ng-controller="HeaderCtrl"></header>
-    <arcticle ng-include="'client/templates/page.ng.html'" ng-controller="PageCtrl"></arcticle>
-    <footer ng-include="'client/templates/footer.ng.html'"></footer>
+    <div ng-include="'client/templates/header.ng.html'" ng-controller="HeaderCtrl"></div>
+    <div ng-include="'client/templates/page.ng.html'" ng-controller="PageCtrl"></div>
+    <div ng-include="'client/templates/footer.ng.html'"></div>
 </body>
