--- a/client/head.html
+++ b/client/head.html
@@ -1,4 +1,5 @@
 <head>
     <title>Todo List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <base href="/">
 </head>
