--- a/client/body.html
+++ b/client/body.html
@@ -1,5 +1,7 @@
 <body ng-app="bullboard">
     <div ng-include="'client/templates/header.ng.html'" ng-controller="HeaderCtrl"></div>
-    <div ng-include="'client/templates/page.ng.html'" ng-controller="PageCtrl"></div>
+    <div ng-controller="PageCtrl">
+        <div ui-view></div>
+    </div>
     <div ng-include="'client/templates/footer.ng.html'"></div>
 </body>
