new template system

--- a/client/body.html
+++ b/client/body.html
@@ -1,5 +1,5 @@
 <body ng-app="bullboard">
-    <div ng-include="'client/templates/header.ng.html'" ng-controller="HeaderCtrl"></div>
+    <div ng-controller="HeaderCtrl"></div>
     <div ng-controller="PageCtrl">
         <div ui-view></div>
     </div>
