--- a/client/body.html
+++ b/client/body.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-4"><h1>Bullboard</h1></div>
-                <div class="col-xs-4 col-xs-offset-4 text-right">{{> loginButtons align="right" class="super"}}</div>
+                <div class="col-xs-4 col-xs-offset-4 text-right">{{> loginButtons align="right" ng-class="super"}}</div>
             </div>
         </div>
         <div class="container-fluid">
