--- a/client/body.html
+++ b/client/body.html
@@ -4,10 +4,14 @@
             <div class="row">
                 <div class="col-xs-4"><h1>Bullboard</h1></div>
                 <div class="col-xs-8 text-right">
+
                     <button class="btn btn-info" ng-click="go('/login')" ng-hide="$root.currentUser">Добавить</button>
                     <button class="btn btn-info" ng-click="go('/ad/new')" ng-show="$root.currentUser">Добавить</button>
                     <button class="btn btn-info" ng-click="go('/account/')" ng-show="$root.currentUser">
                         <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
+                    </button>
+                    <button class="btn btn-info" ng-click="logout()" ng-show="$root.currentUser">
+                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
                     </button>
                 </div>
             </div>
