--- a/client/body.html
+++ b/client/body.html
@@ -1,4 +1,5 @@
-<body ng-app="bullboard" ng-controller="PageCtrl" ng-strict-di="">
+<body ng-app="bullboard" ng-controller="PageCtrl" ng-strict-di="" class="ng-cloak">
+    <blaze-template name="spinner" ng-show="$root.showSpinner"></blaze-template>
     <div>
         <div class="container-fluid">
             <div class="row">
